--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,370 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: #100d13;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+.d1 {
+  @apply text-8xl leading-[104px];
+}
+
+.d2 {
+  @apply text-[64px] leading-[72px];
+}
+
+.h1 {
+  @apply text-5xl leading-[56px];
+}
+
+.h2 {
+  @apply text-[32px] leading-[40px] font-jakartaSans;
+}
+
+.h3 {
+  @apply text-2xl leading-8 font-jakartaSans;
+}
+
+.h4 {
+  @apply text-xl leading-6 font-jakartaSans;
+}
+
+.p1 {
+  @apply text-lg leading-[26px] font-jakartaSans;
+}
+
+.p2 {
+  @apply text-base leading-6 font-jakartaSans;
+}
+
+.p3 {
+  @apply text-sm leading-[22px] font-jakartaSans;
+}
+
+.btn1 {
+  @apply text-base leading-4 font-jakartaSans;
+}
+
+.btn2 {
+  @apply text-sm leading-[14px] font-jakartaSans;
+}
+
+.cpt1 {
+  @apply text-xs leading-4 font-jakartaSans;
+}
+
+.cpt2 {
+  @apply text-xxs leading-4 font-jakartaSans;
+}
+
+.gradient-border {
+  border-image: linear-gradient(to right, #ffffff2e, #ffffff, #ffffff2e) 1;
+  border-width: 1px;
+  border-image-slice: 1;
+}
+
+.gradient-border-purple {
+  border-image: linear-gradient(to right, #926bff2e, #926bff, #926bff2e) 1;
+  border-width: 1px;
+  border-image-slice: 1;
+}
+
+.gradient-background-purple {
+  @apply bg-gradient-to-b  from-[#1E1923] via-[#1E1923] to-[#322151];
+}
+
+.gradient-background-light-purple {
+  @apply bg-gradient-to-b from-[#926BFF] to-[#6845CB];
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.border-gradient::before {
+  content: "";
+  background: #8c4dff;
+  width: 100%;
+  box-shadow: 0 0 20px rgba(16, 13, 19, 1);
+  height: 100%;
+  position: absolute;
+  animation: rotate 2s linear infinite;
+}
+
+.border-gradient::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  inset: 10px;
+  position: absolute;
+  background: transparent;
+  z-index: 0px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
   }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.check-agree {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.check-agree {
+  width: 20px;
+  height: 20px;
+  border: 1px solid #ababab;
+  border-radius: 50%;
+}
+
+.check-agree:checked {
+  background-color: #8c4dff;
+}
+
+.border-gradient {
+  border-radius: 24px;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.border-gradient .component {
+  z-index: 10;
+  position: relative;
+}
+
+.swiper-slide {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* .swiper-hover .swiper-slide {
+    padding-bottom: 70px;
+    padding-top: 50px;
+    display: block;
+} */
+
+.tag-course::-webkit-scrollbar {
+  width: 0;
+}
+
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 8px solid #8b4dff;
+  animation: l20-1 0.8s infinite linear alternate, l20-2 1.6s infinite linear;
+}
+
+@keyframes l20-1 {
+  0% {
+    clip-path: polygon(50% 50%, 0 0, 50% 0%, 50% 0%, 50% 0%, 50% 0%, 50% 0%);
+  }
+
+  12.5% {
+    clip-path: polygon(
+      50% 50%,
+      0 0,
+      50% 0%,
+      100% 0%,
+      100% 0%,
+      100% 0%,
+      100% 0%
+    );
+  }
+
+  25% {
+    clip-path: polygon(
+      50% 50%,
+      0 0,
+      50% 0%,
+      100% 0%,
+      100% 100%,
+      100% 100%,
+      100% 100%
+    );
+  }
+
+  50% {
+    clip-path: polygon(
+      50% 50%,
+      0 0,
+      50% 0%,
+      100% 0%,
+      100% 100%,
+      50% 100%,
+      0% 100%
+    );
+  }
+
+  62.5% {
+    clip-path: polygon(
+      50% 50%,
+      100% 0,
+      100% 0%,
+      100% 0%,
+      100% 100%,
+      50% 100%,
+      0% 100%
+    );
+  }
+
+  75% {
+    clip-path: polygon(
+      50% 50%,
+      100% 100%,
+      100% 100%,
+      100% 100%,
+      100% 100%,
+      50% 100%,
+      0% 100%
+    );
+  }
+
+  100% {
+    clip-path: polygon(
+      50% 50%,
+      50% 100%,
+      50% 100%,
+      50% 100%,
+      50% 100%,
+      50% 100%,
+      0% 100%
+    );
+  }
+}
+
+@keyframes l20-2 {
+  0% {
+    transform: scaleY(1) rotate(0deg);
+  }
+
+  49.99% {
+    transform: scaleY(1) rotate(135deg);
+  }
+
+  50% {
+    transform: scaleY(-1) rotate(0deg);
+  }
+
+  100% {
+    transform: scaleY(-1) rotate(-135deg);
+  }
+}
+
+.check-cursos {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  border-radius: 3px;
+  outline: none;
+  border: 1px solid #4f5356;
+  cursor: pointer;
+}
+
+.check-cursos:checked {
+  background-color: #4c3267;
+  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" class="w-6 h-6"><path fill-rule="evenodd" d="M19.916 4.626a.75.75 0 0 1 .208 1.04l-9 13.5a.75.75 0 0 1-1.154.114l-6-6a.75.75 0 0 1 1.06-1.06l5.353 5.353 8.493-12.74a.75.75 0 0 1 1.04-.207Z" clip-rule="evenodd" /></svg>');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 80%;
+}
+
+.check-cursos + label {
+  color: #4c3267;
+}
+
+.check-cart {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  border-radius: 3px;
+  outline: none;
+  border: 1px solid #4f5356;
+  cursor: pointer;
+}
+
+.check-cart:checked {
+  background-color: #c5f300;
+  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" class="w-6 h-6"><path fill-rule="evenodd" d="M19.916 4.626a.75.75 0 0 1 .208 1.04l-9 13.5a.75.75 0 0 1-1.154.114l-6-6a.75.75 0 0 1 1.06-1.06l5.353 5.353 8.493-12.74a.75.75 0 0 1 1.04-.207Z" clip-rule="evenodd" /></svg>');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 80%;
+}
+
+.check-cart + label {
+  color: #100d13;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  background-color: #c5f300;
+  padding: 20px !important;
+  border-radius: 100%;
+  fill: #100d13 !important;
+  color: #100d13 !important;
+}
+
+.swiper-ads [class^="swiper-button-"]::after {
+  font-size: 20px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+.embed-holder {
+    width: 100%;
+    overflow: hidden;
+    aspect-ratio: 16/9;
+    pointer-events: none;
+}
+
+.embed-holder iframe {
+    width: 100%;
+    height: 100%;
+    margin-left: -100%;
 }
